--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 .body{
     padding: 0%;
     margin: 0%;
+    background-color: red;
 }
 .principal{
-    
+    padding: 100%;
+    float: left;
 }
